# ALAN

./: .gitconfig  .gitignore  DEPLOY_PROJECT.bat  LICENSE  PROJECT.ini  README.md  git_init.bat  git_setgit.bat  git_ssh.bat  lyrgit_pull.bat  lyrgit_push_main.bat  main.py  pyproject.toml
CONFIG/: README.md
DATA/: README.md
DOC/: CHECKLIST.md  README.md  uv.md
DOC/SAMPLE/: TOOLS_SRC_PY.tree
NOTEBOOKS/: README.md
SAMPLE/: PROJECTS_LYR.tree  TOOLS_SRC_PY.dir
SRC/: README.md
SRC/PATTERN_PY/: PATTERN1_PY.bat  PATTERN1_PY.py  PATTERN2_PY.bat  PATTERN2_PY.py  PATTERN3_PY.bat  PATTERN3_PY.py
SRC/__UV/: uv_install.bat  uv_update.bat
TESTS/: README.md
TESTS/demo/: test_main.py
