[build-system]

#### requires

# Default value: []
# Type: list[str]
# Hatchling setuptools Flit PDM uv-build

#### build-backend

# Default value: ""
# Type: str

# Example usage:
# --------------------------------------------
# Hatchling
# --------------------------------------------
# A list of packages that are needed to build your package:
# requires = ["hatchling >= 1.26"]
# The name of the Python object that frontends will use to perform the build:
# build-backend = "hatchling.build"
# --------------------------------------------
# Flit
# --------------------------------------------
# requires = ["flit_core >= 3.12.0, <4"]
# build-backend = "flit_core.buildapi"
# --------------------------------------------
# PDM
# --------------------------------------------
# requires = ["pdm-backend >= 2.4.0"]
# build-backend = "pdm.backend"
# --------------------------------------------
# mesonpy
# --------------------------------------------
# requires = [
#    "meson-python>=0.13.1",
#    "meson>=1.2.1,<2",
#    "wheel",
#    "Cython<4.0.0a0",  # Note: sync with setup.py, environment.yml and asv.conf.json
#    # Force numpy higher than 2.0rc1, so that built wheels are compatible
#    # with both numpy 1 and 2
#    "numpy>=2.0.0rc1",
#    "versioneer[toml]"
#  ]
# build-backend = "mesonpy"
# --------------------------------------------
# setuptools
# --------------------------------------------
# A list of packages that are needed to build your package:
requires = ["setuptools >= 77.0.3"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.
# --------------------------------------------
# uv-build
# --------------------------------------------
# A list of packages that are needed to build your package:
# requires = ["uv_build >= 0.9.21, <0.10.0"]
# The name of the Python object that frontends will use to perform the build:
# build-backend = "uv_build"

[project]

#### ++name

# The name of the project
# https://packaging.python.org/specifications/core-metadata/#name
# Default value: ""
# Type: str
name = "TRICKS"
# Example usage:
# name = "TRICKS"

#### ++version

# The version of the project
# https://packaging.python.org/en/latest/specifications/version-specifiers/#
# Default value: "[N!]N(.N)*[{a|b|rc}N][.postN][.devN]"
# Type: str
version = "0.1.0"
# Example usage:
# version = "0.1.0"

#### ++description

# The summary description of the project in one line
# https://packaging.python.org/en/latest/specifications/core-metadata/#description-optional
# Default value: ""
# Type: str
description = "TRICKS"
# Example usage:
# description = "TRICKS"

#### ++readme

# The full description of the project (i.e. the README)
# Default value: {}
# Type: str or table
readme = "README.md"
# Example usage:
# readme = {file = "README.txt", content-type = "text/markdown"}
# readme = {file = "README.txt", content-type = "text/x-rst"}

#### ++requires-python

# The Python version requirements of the project
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-requires-python
# Default value: ""
# Type: str
requires-python = ">=3.13"
# Example usage:
# requires-python = ">=3.13"

#### ++license

# Text string that is a valid SPDX license expression, as specified in License Expression
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license-expression
# Default value: ""
# Type: str
license = "MIT"
# Example usage:
# license = "MIT"
# license = "BSD-3-Clause"
# license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
# license = "MIT OR GPL-2.0-or-later OR (FSFUL AND BSD-2-Clause)"
# license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
# license = "LicenseRef-Special-License OR CC0-1.0 OR Unlicense"
# license = "LicenseRef-Proprietary"

#### ++license-files

# Each entry is a string representation of the path of a license-related file
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license-file
# Default value: []
# Type: array of str
license-files = ["LICEN[CS]E*", ]
# Example usage:
# license-files = ["LICENSE", "AUTHORS", "LICENSE.txt", "licenses/LICENSE.MIT", "licenses/LICENSE.CC0",
#   "vendored/licenses/*.txt", "AUTHORS.md"
# ]

#### ++authors

# The people or organizations considered to be the “authors” of the project.
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-author
# Default value: []
# Type: Array of inline tables with string keys and values
authors = [
  { name="lisitsinyr", email="lisitsinyr@gmail.com" },
]
# Example usage:
# authors = [
#   {name = "Pradyun Gedam", email = "pradyun@example.com"},
#   {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
#   {name = "Another person"},
#   {email = "different.person@example.com"},
# ]

#### ++maintainers

# A string containing the maintainer’s name at a minimum; additional contact information may be provided
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-maintainer
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-maintainer-email
# Default value: []
# Type: str
maintainers = []
# Example usage:
# maintainers = [
#   {name = "Brett Cannon", email = "brett@example.com"}
# ]

#### ++keywords

# The keywords for the project
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-keywords
# Default value: []
# Type: array of str
keywords = ["sample", "setuptools", "development"]
# Example usage:
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]

#### ++classifiers

# Trove classifiers which apply to the project
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-classifier
# Default value: []
# Type: array of str
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
# Example usage:
# Classifiers help users find your project by categorizing it.
# For a list of valid classifiers, see https://pypi.org/classifiers/
# classifiers = [
#  # How mature is this project? Common values are
#  #   3 - Alpha
#  #   4 - Beta
#  #   5 - Production/Stable
#  "Development Status :: 3 - Alpha",
#
#  # Indicate who your project is intended for
#  "Intended Audience :: Developers",
#  "Topic :: Software Development :: Build Tools",
#
#  # Pick your license as you wish
#  "License :: OSI Approved :: MIT License",
#
#  # Specify the Python versions you support here. In particular, ensure
#  # that you indicate you support Python 3. These classifiers are *not*
#  # checked by "pip install". See instead "requires-python" key in this file.
#  "Programming Language :: Python :: 3",
#  "Programming Language :: Python :: 3.9",
#  "Programming Language :: Python :: 3.10",
#  "Programming Language :: Python :: 3.11",
#  "Programming Language :: Python :: 3.12",
#  "Programming Language :: Python :: 3.13",
#  "Programming Language :: Python :: 3 :: Only",
#]

#### ++dependencies

# The (optional) dependencies of the project.
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#
# Default value: []
# Type: array of str
dependencies = [
    "pip>=25.3",
]
# Example usage:
# dependencies = [
#     "pip>=25.3",
#     "chardet>=5.2.0",
#     "colorama>=0.4.6",
#     "markdown-it-py>=4.0.0",
#     "mdurl>=0.1.2",
#     "psutil>=7.1.3",
#     "pyaes>=1.6.1",
#     "Pygments>=2.19.2",
#     "Pyrogram>=2.0.106",
#     "PySocks>=1.7.1",
#     "rich>=14.2.0",
#     "python-json-logger>=4.0.0",
#     "PyYAML>=6.0.3",
#     "build>=1.3.0",
#     "twine>=6.2.0",
#     "lyrpy>=2025.0.9",
# ]

#### ++import-names

# An array of strings specifying the import names that the project exclusively provides when installed.
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-import-name
# Default value: []
# Type: array of str
# import-names =
# Example usage:
# import-names = ["mypackage", "_private_module ; private"]

#### ++import-namespaces

# An array of strings specifying the import names that the project provides when installed, but not exclusively
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-import-namespace
# Default value: ""
# Type: str
# import-namespaces =
# Example usage:
# import-namespaces = "TRICKS"

#### ++dynamic

# Specifies which keys listed by this PEP were intentionally unspecified so another tool can/will provide such metadata dynamically
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-dynamic
# Default value: []
# Type: array of str
# dynamic = []
# Example usage:
# dynamic = ["version",]

#### ++urls

# (Deprecated: [project.urls])
# Default value: []
# Type: table with keys and values of strings
# urls = []
# Example usage:
# urls = []

[project.urls]

# [project.urls] таблица в файле pyproject.toml, 
# где владельцы пакетов указывают различные URL-адреса, связанные с их проектом. 
# docs.pypi.org
# List URLs that are relevant to your project
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.

# Некоторые возможные поля таблицы:

# Homepage — домашняя страница проекта, часто ссылка на GitHub или GitLab.
Homepage = "https://github.com/pypa/sampleproject"
# Repository — репозиторий исходного кода, не используется, если homepage — это сам репозиторий.
# Repository = ""
# Changelog — журнал изменений, полезный для постоянных пользователей проекта.
# Changelog = ""
# Docs — любые длинные документы, документация.
# Documentation = ""
# Bugs — баги, проблемы, запросы функций.
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
# Download — ссылка для загрузки, полезна, если есть бинарное скачивание.
# Download = ""
# Sponsor — запросы финансирования, спонсорская информация.
# Sponsor = ""
# Discussion Areas — площадки для обсуждений, например, Mastodon, Twitter, Slack, Reddit и Discord.
# "Discussion Areas" = ""
Issues = "https://github.com/pypa/sampleproject/issues"
Funding = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
Source = "https://github.com/pypa/sampleproject/"

#### ++optional-dependencies

[project.optional-dependencies]

# Default value: []
# Type: []
# Example usage:
# optional-dependencies = []
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

#### ++scripts

[project.scripts]

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# Default value: ""
# Type: str
# Example usage:
# spam-cli = "spam:main_cli"
# sample = "sample:main"

#### ++gui-scripts

[project.gui-scripts]

# Default value: ""
# Type: str
# Example usage:
# spam-gui = "spam:main_gui"

#### ++entry-points

[project.entry-points]

# Default value: ""
# Type: str
# entry-points = ""
# Example usage:
# entry-points = "test"

[project.entry-points."spam.magical"]

# tomatoes = "spam:main_tomatoes"

[dependency-groups]

# https://packaging.python.org/en/latest/specifications/dependency-groups/

dev = [
    "TRICKS",
]

# group-a = ["foo"]
# group-b = ["foo>1.0"]
# group-c = ["foo<1.0"]
# all = [
#     "foo",
#     {include-group = "group-a"},
#     {include-group = "group-b"},
#     {include-group = "group-c"},
# ]

[tool.uv]

#### build-constraint-dependencies

# Default value: []
# Type: list[str]
build-constraint-dependencies = []
# Example usage:
# Ensure that the setuptools v60.0.0 is used whenever a package has a build dependency
# on setuptools.
# build-constraint-dependencies = ["setuptools==60.0.0"]

#### conflicts

# Default value: []
# Type: list[list[dict]]
conflicts = []
# Example usage:
# Require that `package[extra1]` and `package[extra2]` are resolved
# in different forks so that they cannot conflict with one another.
# conflicts = [
#     [
#         { extra = "extra1" },
#         { extra = "extra2" },
#     ]
# ]

#### constraint-dependencies

# Default value: []
# Type: list[str]
constraint-dependencies = []
# Example usage:
# Ensure that the grpcio version is always less than 1.65, if it's requested by a
# direct or transitive dependency.
# constraint-dependencies = ["grpcio<1.65"]

#### default-groups

# Default value: ["dev"]
# Type: str | list[str]
default-groups = ["dev"]
# Example usage:
# default-groups = ["docs"]

#### dev-dependencies

# Default value: []
# Type: list[str]
# dev-dependencies = []
# Example usage:
# dev-dependencies = ["ruff==0.5.0"]

#### environments

# Default value: []
# Type: str | list[str]
environments = []
# Example usage:
# Resolve for macOS, but not for Linux or Windows.
# environments = ["sys_platform == 'darwin'"]

#### exclude-dependencies

# Default value: []
# Type: list[str]
exclude-dependencies = []
# Example usage:
# Exclude Werkzeug from being installed, even if transitive dependencies request it.
# exclude-dependencies = ["werkzeug"]

#### managed

# Default value: true
# Type: bool
managed = true
# Example usage:
# managed = false

#### override-dependencies

# Default value: []
# Type: list[str]
override-dependencies = []
# Example usage:
# Always install Werkzeug 2.3.0, regardless of whether transitive dependencies request
# a different version.
# override-dependencies = ["werkzeug==2.3.0"]

#### package

# Default value: true
# Type: bool
package = true
# Example usage:
# package = false

#### required-environments

# Default value: []
# Type: str | list[str]
required-environments = []
# Example usage:
# Require that the package is available for macOS ARM and x86 (Intel).
# required-environments = [
#     "sys_platform == 'darwin' and platform_machine == 'arm64'",
#     "sys_platform == 'darwin' and platform_machine == 'x86_64'",
# ]

#### Configuration add-bounds

# Default value: "lower"
# Possible values:
# "lower": Only a lower bound, e.g., >=1.2.3
# "major": Allow the same major version, similar to the semver caret, e.g., >=1.2.3, <2.0.0
# "minor": Allow the same minor version, similar to the semver tilde, e.g., >=1.2.3, <1.3.0
# "exact": Pin the exact version, e.g., ==1.2.3
add-bounds = "lower"
# Example usage:
# add-bounds = "major"

#### allow-insecure-host

# Default value: []
# Type: list[str]
allow-insecure-host = []
# Example usage:
# allow-insecure-host = ["localhost:8080"]

#### cache-dir

# Default value: None
# Type: str
# cache-dir = 
# Example usage:
# cache-dir = "./.uv_cache"

#### cache-keys

# Default value: [{ file = "pyproject.toml" }, { file = "setup.py" }, { file = "setup.cfg" }]
# Type: list[dict]
cache-keys = [{ file = "pyproject.toml" }, { file = "setup.py" }, { file = "setup.cfg" }]
# Example usage:
# cache-keys = [{ file = "pyproject.toml" }, { file = "requirements.txt" }, { git = { commit = true } }]

#### check-url

# Default value: None
# Type: str
check-url = "https://test.pypi.org/simple"
# Example usage:
# check-url = "https://test.pypi.org/simple"

#### concurrent-builds

# Default value: None
# Type: int
concurrent-builds = 4
# Example usage:
# concurrent-builds = 4

#### concurrent-downloads

# Default value: 50
# Type: int
concurrent-downloads = 50
# Example usage:
# concurrent-downloads = 4

#### concurrent-installs

# Default value: None
# Type: int
concurrent-installs = 4 
# Example usage:
# concurrent-installs = 4

#### config-settings

# Default value: {}
# Type: dict
config-settings = {}
# Example usage:
# config-settings = { editable_mode = "compat" }

#### config-settings-package

# Default value: {}
# Type: dict
config-settings-package = {}
# Example usage:
# config-settings-package = { numpy = { editable_mode = "compat" } }

#### dependency-metadata

# Default value: []
# Type: list[dict]
dependency-metadata = []
# Example usage:
# dependency-metadata = [
#     { name = "flask", version = "1.0.0", requires-dist = ["werkzeug"], requires-python = ">=3.6" },
# ]

#### exclude-newer

# Default value: None
# Type: str
# exclude-newer = "2006-12-02T02:07:43Z"
# Example usage:
# exclude-newer = "2006-12-02T02:07:43Z"

#### exclude-newer-package

# Default value: None
# Type: dict
exclude-newer-package = {}
# Example usage:
# exclude-newer-package = { tqdm = "2022-04-04T00:00:00Z" }

#### extra-build-dependencies

# Default value: []
# Type: dict
extra-build-dependencies = {}
# Example usage:
# extra-build-dependencies = { pytest = ["setuptools"] }

#### extra-build-variables

# Default value: {}
# Type: dict[str, dict[str, str]]
extra-build-variables = {}
# Example usage:
# extra-build-variables = { flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" } }

#### extra-index-url
# (Deprecated: use index instead.)

# Default value: []
# Type: list[str]
# extra-index-url = 
# Example usage:
# extra-index-url = ["https://download.pytorch.org/whl/cpu"]

#### find-links

# Default value: []
# Type: list[str]
# find-links = 
# Example usage:
# find-links = ["https://download.pytorch.org/whl/torch_stable.html"]

#### fork-strategy

# Default value: "requires-python"
# Possible values:
# "fewest": Optimize for selecting the fewest number of versions for each package. Older versions may be preferred if they are compatible with a wider range of supported Python versions or platforms
# "requires-python": Optimize for selecting latest supported version of each package, for each supported Python version
fork-strategy = "requires-python"
# Example usage:
# fork-strategy = "fewest"

#### index-strategy

# Default value: "first-index"
# Possible values:
# "first-index": Only use results from the first index that returns a match for a given package name
# "unsafe-first-match": Search for every package name across all indexes, exhausting the versions from the first index before moving on to the next
# "unsafe-best-match": Search for every package name across all indexes, preferring the "best" version found. If a package version is in multiple indexes, only look at the entry for the first index
index-strategy = "first-index"
# Example usage:
# index-strategy = "unsafe-best-match"

#### index-url
# (Deprecated: use index instead.)

# Default value: "https://pypi.org/simple"
# Type: str
index-url = "https://pypi.org/simple"
# Example usage:
# index-url = "https://test.pypi.org/simple"

#### keyring-provider

# Default value: "disabled"
# Type: str
keyring-provider = "disabled"
# Example usage:
# keyring-provider = "subprocess"

#### link-mode

# Default value: "clone" (macOS) or "hardlink" (Linux, Windows)
# Possible values:
# "clone": Clone (i.e., copy-on-write) packages from the wheel into the site-packages directory
# "copy": Copy packages from the wheel into the site-packages directory
# "hardlink": Hard link packages from the wheel into the site-packages directory
# "symlink": Symbolically link packages from the wheel into the site-packages directory
link-mode = "hardlink"
# Example usage:
# link-mode = "copy"

#### native-tls

# Default value: false
# Type: bool
native-tls = false
# Example usage:
# native-tls = true

#### no-binary

# Default value: false
# Type: bool
no-binary = false
# Example usage:
# no-binary = true

#### no-binary-package

# Default value: []
# Type: list[str]
no-binary-package = []
# Example usage:
# no-binary-package = ["ruff"]

#### no-build

# Default value: false
# Type: bool
no-build = false
# Example usage:
# no-build = true

#### no-build-isolation

# Default value: false
# Type: bool
no-build-isolation = false
# Example usage:
# no-build-isolation = true

#### no-build-isolation-package

# Default value: []
# Type: list[str]
no-build-isolation-package = []
# Example usage:
# no-build-isolation-package = ["package1", "package2"]

#### no-build-package

# Default value: []
# Type: list[str]
no-build-package = []
# Example usage:
# no-build-package = ["ruff"]

#### no-cache

# Default value: false
# Type: bool
no-cache = false
# Example usage:
# no-cache = true

#### no-index

# Default value: false
# Type: bool
no-index = false
# Example usage:
# no-index = true

#### no-sources

# Default value: false
# Type: bool
no-sources = false
# Example usage:
# no-sources = true

#### offline

# Default value: false
# Type: bool
offline = false
# Example usage:
# offline = true

#### prerelease

# Default value: "if-necessary-or-explicit"
# Possible values:
# "disallow": Disallow all pre-release versions
# "allow": Allow all pre-release versions
# "if-necessary": Allow pre-release versions if all versions of a package are pre-release
# "explicit": Allow pre-release versions for first-party packages with explicit pre-release markers in their version requirements
# "if-necessary-or-explicit": Allow pre-release versions if all versions of a package are pre-release, or if the package has an explicit pre-release marker in its version requirements
prerelease = "if-necessary-or-explicit"
# Example usage:
# prerelease = "allow"

#### preview

# Default value: false
# Type: bool
preview = false
# Example usage:
# preview = true

#### publish-url

# Default value: "https://upload.pypi.org/legacy/"
# Type: str
publish-url = "https://upload.pypi.org/legacy/"
# Example usage:
# publish-url = "https://test.pypi.org/legacy/"

#### pypy-install-mirror

# Default value: None
# Type: str
pypy-install-mirror =  "https://downloads.python.org/pypy"
# Example usage:
# pypy-install-mirror = "https://downloads.python.org/pypy"

#### python-downloads

# Default value: "automatic"
# Possible values:
# "automatic": Automatically download managed Python installations when needed
# "manual": Do not automatically download managed Python installations; require explicit installation
# "never": Do not ever allow Python downloads
python-downloads = "automatic"
# Example usage:
# python-downloads = "manual"

#### python-downloads-json-url

# Default value: None
# Type: str
# python-downloads-json-url = "/etc/uv/python-downloads.json"
# Example usage:
# python-downloads-json-url = "/etc/uv/python-downloads.json"

#### python-install-mirror

# Default value: None
# Type: str
python-install-mirror = "https://github.com/astral-sh/python-build-standalone/releases/download"
# Example usage:
# python-install-mirror = "https://github.com/astral-sh/python-build-standalone/releases/download"

#### python-preference

# Default value: "managed"
# Possible values:
# "only-managed": Only use managed Python installations; never use system Python installations
# "managed": Prefer managed Python installations over system Python installations
# "system": Prefer system Python installations over managed Python installations
# "only-system": Only use system Python installations; never use managed Python installations
python-preference = "managed"
# Example usage:
# python-preference = "managed"

#### rereinstall

# Default value: false
# Type: bool
reinstall = false
# Example usage:
# reinstall = true

#### reinstall-package

# Default value: []
# Type: list[str]
reinstall-package = []
# Example usage:
# reinstall-package = ["ruff"]

#### required-version

# Default value: null
# Type: str
required-version = ""
# Example usage:
# required-version = ">=0.5.0"

#### resolution

# Default value: "highest"
# Possible values:
# "highest": Resolve the highest compatible version of each package
# "lowest": Resolve the lowest compatible version of each package
# "lowest-direct": Resolve the lowest compatible version of any direct dependencies, and the highest compatible version of any transitive dependencies
resolution = "highest"
# Example usage:
# resolution = "lowest-direct"

#### torch-backend

# Default value: null
# Type: str
torch-backend = "auto"
# Example usage:
# torch-backend = "auto"

#### trusted-publishing

# Default value: automatic
# Type: str
trusted-publishing = "automatic"
# Example usage:
# trusted-publishing = "always"

#### upgrade

# Default value: false
# Type: bool
upgrade = false
# Example usage:
# upgrade = true

#### upgrade-package

# Default value: []
# Type: list[str]
upgrade-package = []
# Example usage:
# upgrade-package = ["ruff"]

# [[tool.uv.index]]

#### index

# Default value: []
# Type: dict
# Example usage:
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu121"

[tool.uv.build-backend]

#### data

# Default value: {}
# Type: dict[str, str]
data = {}
# Example usage:
# data = { headers = "include/headers", scripts = "bin" }

#### default-excludes

# Default value: true
# Type: bool
default-excludes = true
# Example usage:
# default-excludes = false

#### module-name

# Default value: None
# Type: str | list[str]
module-name = ""
# Example usage:
# module-name = "sklearn"

##### module-root

# Default value: "src"
# Type: str
module-root = "src"
# Example usage:
# module-root = ""

#### namespace

# Default value: false
# Type: bool
namespace = false
# Example usage:
# namespace = true

##### source-exclude

# Default value: []
# Type: list[str]
source-exclude = []
# Example usage:
# source-exclude = ["*.bin"]

#### source-include

# Default value: []
# Type: list[str]
source-include = []
# Example usage:
# source-include = ["tests/**"]

#### wheel-exclude

# Default value: []
# Type: list[str]
wheel-exclude = []
# Example usage:
# wheel-exclude = ["*.bin"]

[tool.uv.dependency-groups]

#### dependency-groups

# Default value: []
# Type: dict
my-group = {}
# Example usage:
# my-group = {requires-python = ">=3.12"}

[tool.uv.sources]

#### sources

# Default value: {}
# Type: dict
# Example usage:
# httpx = { git = "https://github.com/encode/httpx", tag = "0.27.0" }
# pytest = { url = "https://files.pythonhosted.org/packages/6b/77/7440a06a8ead44c7757a64362dd22df5760f9b12dc5f11b6188cd2fc27a0/pytest-8.3.3-py3-none-any.whl" }
# pydantic = { path = "/path/to/pydantic", editable = true }

[tool.uv.workspace]

#### workspace exclude

# Default value: []
# Type: list[str]
exclude = []
# Example usage:
# exclude = ["member1", "path/to/member2", "libs/*"]

#### members

# Default value: []
# Type: list[str]
members = []
# Example usage:
# members = ["member1", "path/to/member2", "libs/*"]

[tool.uv.pip]

#### all-extras

# Default value: false
# Type: bool
all-extras = false
# Example usage:
# all-extras = true

#### allow-empty-requirements

# Default value: false
# Type: bool
allow-empty-requirements = false
# Example usage:
# allow-empty-requirements = true

#### annotation-style

# Default value: "split"
# Possible values:
# "line": Render the annotations on a single, comma-separated line
# "split": Render each annotation on its own line
annotation-style = "split"
# Example usage:
# annotation-style = "line"

#### break-system-packages

# Default value: false
# Type: bool
break-system-packages = false
# Example usage:
# break-system-packages = true

#### compile-bytecode

# Default value: false
# Type: bool
compile-bytecode = false
# Example usage:
# compile-bytecode = true

#### config-settings

# Default value: {}
# Type: dict
config-settings = {}
# Example usage:
# config-settings = { editable_mode = "compat" }

#### config-settings-package

# Default value: {}
# Type: dict
config-settings-package = {}
# Example usage:
# config-settings-package = { numpy = { editable_mode = "compat" } }

#### custom-compile-command

# Default value: None
# Type: str
custom-compile-command = ""
# Example usage:
# custom-compile-command = "./custom-uv-compile.sh"

#### dependency-metadata

# name: The name of the package.
# (Optional) version: The version of the package. If omitted, the metadata will be applied to all versions of the package.
# (Optional) requires-dist: The dependencies of the package (e.g., werkzeug>=0.14).
# (Optional) requires-python: The Python version required by the package (e.g., >=3.10).
# (Optional) provides-extra: The extras provided by the package.
# Default value: []
# Type: list[dict]
dependency-metadata = []
# Example usage:
# dependency-metadata = [
#     { name = "flask", version = "1.0.0", requires-dist = ["werkzeug"], requires-python = ">=3.6" },
# ]

#### emit-build-options

# Default value: false
# Type: bool
emit-build-options = false
# Example usage:
# emit-build-options = true

#### emit-find-links

# Default value: false
# Type: bool
emit-find-links = false
# Example usage:
# emit-find-links = true

#### emit-index-annotation

# Default value: false
# Type: bool
emit-index-annotation = false
# Example usage:
# emit-index-annotation = true

#### emit-index-url

# Default value: false
# Type: bool
emit-index-url = false
# Example usage:
# emit-index-url = true

#### emit-marker-expression

# Default value: false
# Type: bool
emit-marker-expression = false
# Example usage:
# emit-marker-expression = true

#### exclude-newer

# Default value: None
# Type: str
# exclude-newer = ""
# Example usage:
# exclude-newer = "2006-12-02T02:07:43Z"

#### exclude-newer-package

# Default value: None
# Type: dict
# exclude-newer-package = ""
# Example usage:
# exclude-newer-package = { tqdm = "2022-04-04T00:00:00Z" }

#### extra

# Default value: []
# Type: list[str]
extra = []
# Example usage:
# extra = ["dev", "docs"]

#### extra-build-dependencies

# Default value: []
# Type: dict
# extra-build-dependencies = []
# Example usage:
# extra-build-dependencies = { pytest = ["setuptools"] }

#### extra-build-variables

# Default value: {}
# Type: dict[str, dict[str, str]]
extra-build-variables = {}
# Example usage:
# extra-build-variables = { flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" } }

#### extra-index-url

# Default value: []
# Type: list[str]
extra-index-url = []
# Example usage:
# extra-index-url = ["https://download.pytorch.org/whl/cpu"]

#### find-links

# Default value: []
# Type: list[str]
find-links = []
# Example usage:
# find-links = ["https://download.pytorch.org/whl/torch_stable.html"]

#### fork-strategy

# Default value: "requires-python"
# Possible values:
# "fewest": Optimize for selecting the fewest number of versions for each package. Older versions may be preferred if they are compatible with a wider range of supported Python versions or platforms
# "requires-python": Optimize for selecting latest supported version of each package, for each supported Python version
fork-strategy = "requires-python"
# Example usage:
# fork-strategy = "fewest"

#### generate-hashes

# Default value: false
# Type: bool
generate-hashes = false
# Example usage:
# generate-hashes = true

#### group

# Default value: None
# Type: list[str]
group = []
# Example usage:
# group = ["dev", "docs"]

#### index-strategy

# Default value: "first-index"
# Possible values:
# "first-index": Only use results from the first index that returns a match for a given package name
# "unsafe-first-match": Search for every package name across all indexes, exhausting the versions from the first index before moving on to the next
# "unsafe-best-match": Search for every package name across all indexes, preferring the "best" version found. If a package version is in multiple indexes, only look at the entry for the first index
index-strategy = "first-index"
# Example usage:
# index-strategy = "unsafe-best-match"

#### index-url

# Default value: "https://pypi.org/simple"
# Type: str
index-url = "https://pypi.org/simple"
# Example usage:
# index-url = "https://test.pypi.org/simple"

#### keyring-provider

# Default value: disabled
# Type: str
keyring-provider = "subprocess"
# Example usage:
# keyring-provider = "subprocess"

#### link-mode

# Default value: "clone" (macOS) or "hardlink" (Linux, Windows)
# Possible values:
# "clone": Clone (i.e., copy-on-write) packages from the wheel into the site-packages directory
# "copy": Copy packages from the wheel into the site-packages directory
# "hardlink": Hard link packages from the wheel into the site-packages directory
# "symlink": Symbolically link packages from the wheel into the site-packages directory
link-mode = "hardlink"
# Example usage:
# link-mode = "copy"

#### no-annotate

# Default value: false
# Type: bool
no-annotate = false
# Example usage:
# no-annotate = true

#### no-binary

# Default value: []
# Type: list[str]
no-binary = []
# Example usage:
# no-binary = ["ruff"]

#### no-build

# Default value: false
# Type: bool
no-build = false
# Example usage:
# no-build = true

#### no-build-isolation

# Default value: false
# Type: bool
no-build-isolation = false
# Example usage:
# no-build-isolation = true

#### no-build-isolation-package

# Default value: []
# Type: list[str]
no-build-isolation-package = []
# Example usage:
# no-build-isolation-package = ["package1", "package2"]

#### no-deps

# Default value: false
# Type: bool
no-deps = false
# Example usage:
# no-deps = true

#### no-emit-package

# Default value: []
# Type: list[str]
no-emit-package = []
# Example usage:
# no-emit-package = ["ruff"]

#### no-extra

# Default value: []
# Type: list[str]
no-extra = []
# Example usage:
# [tool.uv.pip]
# all-extras = true
# no-extra = ["dev", "docs"]

#### no-header

# Default value: false
# Type: bool
no-header = false
# Example usage:
# no-header = true

#### no-index

# Default value: false
# Type: bool
no-index = false
# Example usage:
# no-index = true

#### no-sources

# Default value: false
# Type: bool
no-sources = false
# Example usage:
# no-sources = true

#### no-strip-extras

# Default value: false
# Type: bool
no-strip-extras = false
# Example usage:
# no-strip-extras = true

#### no-strip-markers

# Default value: false
# Type: bool
no-strip-markers = false
# Example usage:
# no-strip-markers = true

#### only-binary

# Default value: []
# Type: list[str]
# Example usage:
# only-binary = ["ruff"]

#### output-file

# Default value: None
# Type: str
output-file = ""
# Example usage:
# output-file = "requirements.txt"

#### prefix

# Default value: None
# Type: str
prefix = ""
# Example usage:
# prefix = "./prefix"

#### prerelease

# Default value: "if-necessary-or-explicit"
# Possible values:
# "disallow": Disallow all pre-release versions
# "allow": Allow all pre-release versions
# "if-necessary": Allow pre-release versions if all versions of a package are pre-release
# "explicit": Allow pre-release versions for first-party packages with explicit pre-release markers in their version requirements
# "if-necessary-or-explicit": Allow pre-release versions if all versions of a package are pre-release, or if the package has an explicit pre-release marker in its version requirements
prerelease = "if-necessary-or-explicit"
# Example usage:
# prerelease = "allow"

#### python

# Default value: None
# Type: str
python = "3.14"
# Example usage:
# python = "3.10"

#### python-platform

# Default value: None
# Type: str
# python-platform = ""
# Example usage:
# python-platform = "x86_64-unknown-linux-gnu"

#### python-version

# Default value: None
# Type: str
python-version = "3.14"
# Example usage:
# python-version = "3.8"

#### reinstall

# Default value: false
# Type: bool
reinstall = false
# Example usage:
# reinstall = true

#### reinstall-package

# Default value: []
# Type: list[str]
reinstall-package = []
# Example usage:
# reinstall-package = ["ruff"]

#### require-hashes

# Default value: false
# Type: bool
require-hashes = false
# Example usage:
# require-hashes = true

#### resolution

# Default value: "highest"
# Possible values:
# "highest": Resolve the highest compatible version of each package
# "lowest": Resolve the lowest compatible version of each package
# "lowest-direct": Resolve the lowest compatible version of any direct dependencies, and the highest compatible version of any transitive dependencies
resolution = "highest"
# Example usage:
# resolution = "lowest-direct"

#### strict

# Default value: false
# Type: bool
strict = false
# Example usage:
# strict = true

#### system

# Default value: false
# Type: bool
system = false
# Example usage:
# system = true

#### target

# Default value: None
# Type: str
target = ""
# Example usage:
# target = "./target"

#### torch-backend

# Default value: null
# Type: str
torch-backend = "auto"
# Example usage:
# torch-backend = "auto"

#### universal

# Default value: false
# Type: bool
universal = false
# Example usage:
# universal = true

#### upgrade

# Default value: false
# Type: bool
upgrade = false
# Example usage:
# upgrade = true

#### upgrade-package

# Default value: []
# Type: list[str]
upgrade-package = []
# Example usage:
# upgrade-package = ["ruff"]

#### verify-hashes

# Default value: true
# Type: bool
verify-hashes = true
# Example usage:
# verify-hashes = true
