[project]

#### ++name

# The name of the project
# https://packaging.python.org/specifications/core-metadata/#name
# Default value: ""
# Type: str
name = "ALAN"
# Example usage:
# name = "TRICKS"

#### ++version

# The version of the project
# https://packaging.python.org/en/latest/specifications/version-specifiers/#
# Default value: "[N!]N(.N)*[{a|b|rc}N][.postN][.devN]"
# Type: str
version = "0.1.0"
# Example usage:
# version = "0.1.0"

#### ++description

# The summary description of the project in one line
# https://packaging.python.org/en/latest/specifications/core-metadata/#description-optional
# Default value: ""
# Type: str
description = "ALAN"
# Example usage:
# description = "TRICKS"

#### ++readme

# The full description of the project (i.e. the README)
# Default value: {}
# Type: str or table
readme = "README.md"
# Example usage:
# readme = {file = "README.txt", content-type = "text/markdown"}
# readme = {file = "README.txt", content-type = "text/x-rst"}

#### ++requires-python

# The Python version requirements of the project
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-requires-python
# Default value: ""
# Type: str
requires-python = ">=3.13"
# Example usage:
# requires-python = ">=3.13"

#### ++license

# Text string that is a valid SPDX license expression, as specified in License Expression
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license-expression
# Default value: ""
# Type: str
license = "MIT"
# Example usage:
# license = "MIT"
# license = "BSD-3-Clause"
# license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
# license = "MIT OR GPL-2.0-or-later OR (FSFUL AND BSD-2-Clause)"
# license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
# license = "LicenseRef-Special-License OR CC0-1.0 OR Unlicense"
# license = "LicenseRef-Proprietary"

#### ++license-files

# Each entry is a string representation of the path of a license-related file
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-license-file
# Default value: []
# Type: array of str
license-files = ["LICEN[CS]E*", ]
# Example usage:
# license-files = ["LICENSE", "AUTHORS", "LICENSE.txt", "licenses/LICENSE.MIT", "licenses/LICENSE.CC0",
#   "vendored/licenses/*.txt", "AUTHORS.md"
# ]

#### ++authors

# The people or organizations considered to be the “authors” of the project.
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-author
# Default value: []
# Type: Array of inline tables with string keys and values
authors = [
  { name="lisitsinyr", email="lisitsinyr@gmail.com" },
]
# Example usage:
# authors = [
#   {name = "Pradyun Gedam", email = "pradyun@example.com"},
#   {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
#   {name = "Another person"},
#   {email = "different.person@example.com"},
# ]

#### ++maintainers

# A string containing the maintainer’s name at a minimum; additional contact information may be provided
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-maintainer
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-maintainer-email
# Default value: []
# Type: str
maintainers = []
# Example usage:
# maintainers = [
#   {name = "Brett Cannon", email = "brett@example.com"}
# ]

#### ++keywords

# The keywords for the project
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-keywords
# Default value: []
# Type: array of str
keywords = ["sample", "setuptools", "development"]
# Example usage:
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]

#### ++classifiers

# Trove classifiers which apply to the project
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-classifier
# Default value: []
# Type: array of str
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
# Example usage:
# Classifiers help users find your project by categorizing it.
# For a list of valid classifiers, see https://pypi.org/classifiers/
# classifiers = [
#  # How mature is this project? Common values are
#  #   3 - Alpha
#  #   4 - Beta
#  #   5 - Production/Stable
#  "Development Status :: 3 - Alpha",
#
#  # Indicate who your project is intended for
#  "Intended Audience :: Developers",
#  "Topic :: Software Development :: Build Tools",
#
#  # Pick your license as you wish
#  "License :: OSI Approved :: MIT License",
#
#  # Specify the Python versions you support here. In particular, ensure
#  # that you indicate you support Python 3. These classifiers are *not*
#  # checked by "pip install". See instead "requires-python" key in this file.
#  "Programming Language :: Python :: 3",
#  "Programming Language :: Python :: 3.9",
#  "Programming Language :: Python :: 3.10",
#  "Programming Language :: Python :: 3.11",
#  "Programming Language :: Python :: 3.12",
#  "Programming Language :: Python :: 3.13",
#  "Programming Language :: Python :: 3 :: Only",
#]

#### ++dependencies

# The (optional) dependencies of the project.
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#
# Default value: []
# Type: array of str
dependencies = [
    "pip==26.0.1",
]

# Example usage:
# dependencies = [
#     "pip>=25.3",
#     "chardet>=5.2.0",
#     "colorama>=0.4.6",
#     "markdown-it-py>=4.0.0",
#     "mdurl>=0.1.2",
#     "psutil>=7.1.3",
#     "pyaes>=1.6.1",
#     "Pygments>=2.19.2",
#     "Pyrogram>=2.0.106",
#     "PySocks>=1.7.1",
#     "rich>=14.2.0",
#     "python-json-logger>=4.0.0",
#     "PyYAML>=6.0.3",
#     "build>=1.3.0",
#     "twine>=6.2.0",
#     "lyrpy>=2025.0.9",
# ]

#### ++import-names

# An array of strings specifying the import names that the project exclusively provides when installed.
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-import-name
# Default value: []
# Type: array of str
#import-names =
# Example usage:
# import-names = ["mypackage", "_private_module ; private"]

#### ++import-namespaces

# An array of strings specifying the import names that the project provides when installed, but not exclusively
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-import-namespace
# Default value: ""
# Type: str
#import-namespaces =
# Example usage:
# import-namespaces = "TRICKS"

#### ++dynamic

# Specifies which keys listed by this PEP were intentionally unspecified so another tool can/will provide such metadata dynamically
# https://packaging.python.org/en/latest/specifications/core-metadata/#core-metadata-dynamic
# Default value: []
# Type: array of str
#dynamic = []
# Example usage:
# dynamic = ["version",]
